# cea-ai_radiography

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
Notebooks/: example.ipynb
src/cea_radiography/: cea.py  evaluator.py  performance.py
